sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value True
  var change:Boolean=True
                     ^AlgBubbleSort1:6: error: not found: value False
    change==False
            ^AlgBubbleSort1:10: error: not found: value True
        change==True
                ^