sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var change:Boolean=True
  val m=getNombreValeurs()
  while (change){
    change==False
    for (i<-1 to m-2){
      if (getValeur(i)>getValeur(i+1)){
        echange(i,i+1)
        change==True
      }
      
    }
    
  }
}